@@ -185,6 +185,8 @@ Release 0.19.0 - Unreleased
    HBASE-1053  bring recent rpc changes down from hadoop
    HBASE-1056  [migration] enable blockcaching on .META. table
    HBASE-1069  Show whether HRegion major compacts or not in INFO level
+   HBASE-1066  Master should support close/open/reassignment/enable/disable
+               operations on individual regions
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
